fixed text rendering on firefox on mac

--- a/themes/custom/atp_theme/sass/_slideshow.scss
+++ b/themes/custom/atp_theme/sass/_slideshow.scss
@@ -58,9 +58,6 @@ $slideshow-title: 22px;
     }
   }
   ol {
-    @include device(phone){
-      display: none;
-    }
     bottom: $margins/2;
     position: absolute;
     width: 100%;
